--- a/ecsswebauth/saml_config/settings.example.json
+++ b/ecsswebauth/saml_config/settings.example.json
@@ -2,13 +2,13 @@
     "strict": true,
     "debug": true,
     "sp": {
-        "entityId": "http://localhost:8000/auth/saml/metadata/",
+        "entityId": "http://localhost:8000/auth/saml/metadata",
         "assertionConsumerService": {
-            "url": "http://localhost:8000/auth/saml/acs/",
+            "url": "http://localhost:8000/auth/saml/acs",
             "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST"
         },
         "singleLogoutService": {
-            "url": "http://localhost:8000/saml/sls/",
+            "url": "http://localhost:8000/saml/sls",
             "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect"
         },
         "attributeConsumingService": {
