Fix single logout

--- a/ecsswebauth/saml_config/advanced_settings.json
+++ b/ecsswebauth/saml_config/advanced_settings.json
@@ -2,7 +2,7 @@
     "security": {
         "nameIdEncrypted": false,
         "authnRequestsSigned": false,
-        "logoutRequestSigned": false,
+        "logoutRequestSigned": true,
         "logoutResponseSigned": false,
         "signMetadata": false,
         "wantMessagesSigned": false,
