--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,11 @@
 version: 2
 jobs:
   build:
+    branches:
+      only:
+        - master
+        - develop
+
     docker:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
