--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,12 @@ jobs:
       - run:
           name: install dependencies
           command: |
+            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
+            wget http://xmlsoft.org/sources/libxml2-2.9.1.tar.gz
+            tar -xvf libxml2-2.9.1.tar.gz
+            cd libxml2-2.9.1
+            ./configure && make && make install
+            
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
