Sign logout responses

--- a/ecsswebauth/saml_config/advanced_settings.json
+++ b/ecsswebauth/saml_config/advanced_settings.json
@@ -3,7 +3,7 @@
         "nameIdEncrypted": false,
         "authnRequestsSigned": false,
         "logoutRequestSigned": true,
-        "logoutResponseSigned": false,
+        "logoutResponseSigned": true,
         "signMetadata": false,
         "wantMessagesSigned": false,
         "wantAssertionsSigned": false,
