CI run coverage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,7 @@ jobs:
             . venv/bin/activate
             pip install coverage
             pip install codacy-coverage
+            coverage run --source='.' manage.py test myapp
             coverage xml
             export CODACY_PROJECT_TOKEN=$COVERAGE_TOKEN
             python-codacy-coverage -r coverage.xml
