--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ defusedxml==0.5.0
 Django==2.0.5
 isodate==0.6.0
 lxml==4.2.1
+Pillow==5.2.0
 pkgconfig==1.3.1
 python3-saml==1.4.1
 pytz==2018.4
-PyYAML==3.12
+PyYAML==3.13
 six==1.11.0
 xmlsec==1.3.3
