--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+certifi==2018.8.24
+chardet==3.0.4
 defusedxml==0.5.0
 Django==2.0.5
+idna==2.7
 isodate==0.6.0
 lxml==4.2.1
 Pillow==5.2.0
@@ -7,5 +10,7 @@ pkgconfig==1.3.1
 python3-saml==1.4.1
 pytz==2018.4
 PyYAML==3.13
+requests==2.19.1
 six==1.11.0
+urllib3==1.23
 xmlsec==1.3.3
