--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
+            pip install --upgrade pip
             python manage.py test
   coverage:
     docker:
@@ -58,6 +59,7 @@ jobs:
           name: coverage
           command: |
             . venv/bin/activate
+            pip install --upgrade pip
             pip install coverage
             pip install codacy-coverage
             coverage run --source='.' manage.py test
