--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,10 +43,18 @@ jobs:
       - attach_workspace:
           at: ./
       - run:
-          name: run tests
+          name: install dependencies
           command: |
+            sudo apt-get update
+            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
+      - run:
+          name: virtualenv setup
+          command: |
+            python3 -m venv venv
             source venv/bin/activate
-            python manage.py test
+      - run:
+          name: run tests
+          command: python manage.py test
   coverage:
     docker:
         - image: circleci/python:3.6.6-browsers
@@ -55,9 +63,18 @@ jobs:
       - attach_workspace:
           at: ./
       - run:
+          name: install dependencies
+          command: |
+            sudo apt-get update
+            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
+      - run:
+          name: virtualenv setup
+          command: |
+            python3 -m venv venv
+            source venv/bin/activate
+      - run:
           name: coverage
           command: |
-            source venv/bin/activate
             pip install coverage
             pip install codacy-coverage
             coverage run --source='.' manage.py test
