. instead of source

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
             sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
 
             python3 -m venv venv
-            source venv/bin/activate
+            . venv/bin/activate
             pip install --upgrade pip
             pip install -r requirements.txt
       - save_cache:
@@ -51,7 +51,7 @@ jobs:
           name: virtualenv setup
           command: |
             python3 -m venv venv
-            source venv/bin/activate
+            . venv/bin/activate
       - run:
           name: run tests
           command: python manage.py test
@@ -71,7 +71,7 @@ jobs:
           name: virtualenv setup
           command: |
             python3 -m venv venv
-            source venv/bin/activate
+            . venv/bin/activate
       - run:
           name: coverage
           command: |
