--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,13 +48,10 @@ jobs:
             sudo apt-get update
             sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
       - run:
-          name: virtualenv setup
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-      - run:
           name: run tests
-          command: python manage.py test
+          command: |
+            . venv/bin/activate
+            python manage.py test
   coverage:
     docker:
         - image: circleci/python:3.6.6-browsers
@@ -68,15 +65,11 @@ jobs:
             sudo apt-get update
             sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
       - run:
-          name: virtualenv setup
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-      - run:
           name: coverage
           command: |
-            pip install coverage
-            pip install codacy-coverage
+            . venv/bin/activate
+            pip install --user coverage
+            pip install --user codacy-coverage
             coverage run --source='.' manage.py test
             coverage report
             coverage xml
