--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
   coverage:
     docker:
         - image: circleci/python:3.6.6-browsers
-    working_directory: ~/
+    working_directory: ~/repo
     steps:
       - attach_workspace:
           at: ./
