--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           name: install dependencies
           command: |
             sudo apt-get update
-            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libssl-dev
+            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libssl1.0.0 libssl-dev
 
             python3 -m venv venv
             . venv/bin/activate
@@ -46,7 +46,7 @@ jobs:
           name: install dependencies
           command: |
             sudo apt-get update
-            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libssl-dev
+            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libssl1.0.0 libssl-dev
       - run:
           name: run tests
           command: |
@@ -63,7 +63,7 @@ jobs:
           name: install dependencies
           command: |
             sudo apt-get update
-            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libssl-dev
+            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libssl1.0.0 libssl-dev
       - run:
           name: coverage
           command: |
