--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,18 @@ jobs:
           # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       - run:
-          name: install dependencies
+          name: install system dependencies
           command: |
             sudo apt-get update
-            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libssl1.0.0 libssl-dev
+            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
 
+            wget -O libssl.deb http://security.debian.org/debian-security/pool/updates/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u9_amd64.deb
+            sudo dpkg -i libssl.deb
+            sudo apt install -f
+            rm libssl.deb 
+      - run:
+          name: install python dependencies
+          command: |
             python3 -m venv venv
             . venv/bin/activate
             pip install --upgrade pip
@@ -46,7 +53,12 @@ jobs:
           name: install dependencies
           command: |
             sudo apt-get update
-            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libssl1.0.0 libssl-dev
+            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
+
+            wget -O libssl.deb http://security.debian.org/debian-security/pool/updates/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u9_amd64.deb
+            sudo dpkg -i libssl.deb
+            sudo apt install -f
+            rm libssl.deb 
       - run:
           name: run tests
           command: |
@@ -63,7 +75,12 @@ jobs:
           name: install dependencies
           command: |
             sudo apt-get update
-            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libssl1.0.0 libssl-dev
+            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
+
+            wget -O libssl.deb http://security.debian.org/debian-security/pool/updates/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u9_amd64.deb
+            sudo dpkg -i libssl.deb
+            sudo apt install -f
+            rm libssl.deb 
       - run:
           name: coverage
           command: |
