Fix html, start city challenge

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ fixture.local.yaml
 societies.yaml
 sponsors.yaml
 committee.yaml
-jumpstart.yaml
+data/jumpstart/
 
 # website content
 website/static/website/content/
