--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,40 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+      
+  browser_test:
+    docker:
+        - image: circleci/python:3.6.6-browsers
+    working_directory: ~/repo
+    steps:
+      - attach_workspace:
+          at: ./
+      - run:
+          name: install dependencies
+          command: |
+            sudo apt-get update
+            sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
+
+            wget -O libssl.deb http://security.debian.org/debian-security/pool/updates/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u9_amd64.deb
+            sudo dpkg -i libssl.deb
+            sudo apt install -f
+            rm libssl.deb
+            
+            . venv/bin/activate
+            pip install selenium
+      - run:
+          name: start server
+          command: |
+            . venv/bin/activate
+            python manage.py runserver &
+      - run:
+          name: start server
+          command: |
+            . venv/bin/activate
+            python selenium.py
+      - store_artifacts:
+          path: test-reports
+          destination: test-reports
 
 workflows:
   version: 2
@@ -118,6 +152,15 @@ workflows:
                 - develop
                 - seleniumSetup
       - coverage:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
+                - develop
+                - seleniumSetup
+      - browser_test:
           requires:
             - build
           filters:
