--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ sponsors.yaml
 sponsors1819.yaml
 committee.yaml
 data/jumpstart/
+data/merch1819/
 
 # website content
 website/static/website/content/
