--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pkgconfig==1.3.1
 python3-saml==1.4.1
 pytz==2018.4
 PyYAML==3.13
-requests==2.19.1
+requests>=2.20.0
 six==1.11.0
 urllib3==1.23
 xmlsec==1.3.3
