Add results page

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ sponsors1819.yaml
 committee.yaml
 data/jumpstart/
 data/merch1819/
+election/data/
 
 # website content
 website/static/website/content/
