--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,15 @@ Django>=2.1.6
 idna==2.7
 isodate==0.6.0
 lxml==4.2.1
-Pillow==5.2.0
+Pillow>=5.2.0
 pkgconfig==1.3.1
 python3-saml==1.4.1
 pytz==2018.4
-PyYAML>=4.2b1
+PyYAML>=5.1b1
 requests>=2.20.0
 six==1.11.0
 urllib3>=1.24.2
-xmlsec==1.3.3
+xmlsec>=1.3.3
 markdown>=3.1
 bleach>=3.1.0
 webencodings>=0.5.1
