Only include root static in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ jumpstart/data/
 website/static/website/content/
 shop/static/shop/content/
 media/
-static/
+/static/
 
 # SAML config
 ecsswebauth/saml_config/settings.json
