--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ defusedxml==0.5.0
 Django>=2.1.6
 idna==2.7
 isodate==0.6.0
-lxml==4.2.1
+lxml>=4.2.1
 Pillow>=5.2.0
 pkgconfig==1.3.1
 python3-saml==1.5.0
@@ -17,3 +17,4 @@ xmlsec>=1.3.3
 markdown>=3.1
 bleach>=3.1.0
 webencodings>=0.5.1
+stripe>=5.0.0
